--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "setup": "node scripts/setup-simple.js",
+    "setup:guided": "node scripts/setup-manual.js",
+    "setup:auto": "node scripts/setup-supabase.js",
+    "setup:bash": "bash scripts/setup-supabase.sh",
+    "setup:windows": "scripts/setup-supabase.bat"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.0",
