--- a/package.json
+++ b/package.json
@@ -6,38 +6,30 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "setup": "node scripts/setup-simple.js",
-    "setup:guided": "node scripts/setup-manual.js",
-    "setup:auto": "node scripts/setup-supabase.js",
-    "setup:bash": "bash scripts/setup-supabase.sh",
-    "setup:windows": "scripts/setup-supabase.bat"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.39.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
-    "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
-    "date-fns": "^3.0.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.4",
-    "jspdf": "^2.5.1",
-    "lucide-react": "^0.300.0",
-    "next": "14.0.4",
+    "lucide-react": "^0.263.1",
+    "mongodb": "^6.0.0",
+    "next": "14.0.0",
     "postcss": "^8",
     "react": "^18",
     "react-dom": "^18",
-    "react-dropzone": "^14.2.3",
-    "tailwind-merge": "^2.2.0",
+
+    "tailwind-merge": "^2.0.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5",
-    "zustand": "^4.4.7"
+    "zustand": "^4.4.0",
+
+    "date-fns": "^2.30.0"
   },
   "devDependencies": {
-    "@types/file-saver": "^2.0.7",
-    "file-saver": "^2.0.5"
+    "eslint": "^8",
+    "eslint-config-next": "14.0.0"
   }
 }
