--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "lucide-react": "^0.263.1",
     "mongodb": "^6.0.0",
     "next": "14.0.0",
+    "papaparse": "^5.5.3",
     "postcss": "^8",
     "react": "^18",
     "react-beautiful-dnd": "^13.1.1",
@@ -30,10 +31,12 @@
     "tailwind-merge": "^2.0.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5",
+    "xlsx": "^0.18.5",
     "zustand": "^4.4.0"
   },
   "devDependencies": {
     "@types/html2canvas": "^0.5.35",
+    "@types/papaparse": "^5.3.16",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8",
